Bring back Java 8 compatibility + allow for more efficient means of responding with data.